Added connectivity and implemented connectivity helpers

--- a/draword/draword/Info.plist
+++ b/draword/draword/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_alf-draword._tcp</string>
+		<string>_alf-draword._udp</string>
+	</array>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Draword needs to use your phone’s data to discover devices nearby</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
