--- a/draword/draword/Info.plist
+++ b/draword/draword/Info.plist
@@ -2,15 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSBonjourServices</key>
-	<array>
-		<string>_alf-draword._tcp</string>
-		<string>_alf-draword._udp</string>
-	</array>
-	<key>NSLocalNetworkUsageDescription</key>
-	<string>Draword needs to use your phone’s data to discover devices nearby</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Draword</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -27,6 +22,13 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_alf-draword._tcp</string>
+		<string>_alf-draword._udp</string>
+	</array>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Draword needs to use your phone’s data to discover devices nearby</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
